# effective-python-notes

./: .gitignore  chapter10.ipynb  chapter3.ipynb  chapter5.ipynb  chapter7.ipynb  chapter8.ipynb  chapter9.ipynb  packages.csv  pyproject.toml  sayitaintso.txt
