[project]
name = "effective-python-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=37.1.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "jupyterlab-git>=0.51.1",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.4",
]
